Created a basic version of Symbolic Format. Breaks my tests - requires fixing.